# devops_old

./: .firebaserc  .gitignore  .gitlab-ci.yml  .imgbotconfig  AB Testing  AB Testing.md  Canaries Testing.md  CrowdSec.md  DevOpsBot.md  Docker_CrowdSec.md  Fuzzing Testing  Fuzzing Testing.md  Jest.config.js  README.md  ScannerDocker.md  WORKSPACE  angular.json  app.jdl  default.conf  dependabot.md  deployment.jdl  docker-compose.yml  firebase.json  imgbot.md  karma.conf.js  package-lock.json  package.json  readmeMonitoring.md  renovatebot.md  repairbot.md
.github/workflows/: bazel.yml  docker-publish.yml  main.yml
Bazel_Workspace/: WORKSPACE
DevOpsBot/: calendrier.js  index.js  membres.js  package-lock.json  package.json  toDoList.js
Devops_projet/: README.md  cluster-config.yaml  manifest.yaml
Devops_projet/app/: Dockerfile  config.json  package-lock.json  package.json  server.js
Fuzzing/: README.md  angular.json  package-lock.json  package.json
Fuzzing/src/: index.html
Quarkus/: BUILD  BUILD.bazel  bazel-Quarkus  pom.xml
Scott&JUNIT4/: pom.xml  readme.md
Stryker/: README.md
back-end/: Dockerfile  README.md  package-lock.json  package.json
back-end/src/: app.module.ts  main.ts
backend/: BUILD  Build.bazel  Dockerfile  README.md  WORKSPACE  mydatabase.db  package-lock.json  package.json  pnpm-lock.yaml
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/associations/: association.dto.ts  association.entity.ts  association.member.ts  associations.controller.ts  associations.module.ts  associations.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts  local.strategy.ts
backend/src/minutes/: minute.entity.ts  minutes.controller.ts  minutes.module.ts  minutes.service.ts
backend/src/roles/: role.entity.ts  roles.controller.ts  roles.module.ts  roles.service.ts
backend/src/users/: user.entity.ts  user.input.ts  users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.ts
backend/test/: crud_minutes.sh  crud_roles.sh  dev_init_db_specific_apis.sh  test.sh  typeorm_repository_et_donnees_test.sh
bazel/: README.md
bazel/bazel_js_monorepo/: BUILD.bazel  WORKSPACE  app.js  es5.babelrc  package-lock.json  package.json
bazel/bazel_js_monorepo/tools/: bazel_deps.bzl
dockerCompose_grafana/: docker-compose.yaml
dockerCompose_grafana/prometheus/: prometheus.yml
dockerCompose_production/: docker-compose.yml
docs/: app.jdl.md
documentation/ABTEST/: ABTEST.md
documentation/canary/: canary.md
front-end/: Dockerfile  angular.json  package-lock.json  package.json
front-end/src/: index.html  styles.css
frontend/: Dockerfile  WORKSPACE  angular.json  package-lock.json  package.json
frontend/src/: BUILD.bazel  external.bzl  index.html  ng_perf.bzl
invoice/: .yo-rc.json  README.md  build.gradle  package-lock.json  package.json
kubernetes/: .yo-rc.json  K8S-README.md  kubectl-apply.sh  skaffold.yml
logging/: docker-compose.yaml  fluent.conf
notification/: .yo-rc.json  README.md  build.gradle  package-lock.json  package.json
perfecto/: README.md
pgdata/global/: 1260  (+4 more)
product/: .yo-rc.json  README.md  build.gradle  gradle.properties  package-lock.json  package.json  sonar-project.properties
src/: app.controller.ts  app.service.ts  index.html  main.ts
store/: .yo-rc.json  README.md  build.gradle  package-lock.json  package.json
terraformproject/: .gitignore  README.md  docker-compose.yml
testContainer/: README.md  pom.xml
(+709 files in other folders)
