load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "app",
    entry_point = "src/main.ts",
    data = glob(["**/*.json", "**/*.env"]),
    deps = [
        "@npm//@nestjs/core",
        "@npm//@nestjs/common",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/swagger",
        "@npm//rxjs",
        "@npm//reflect-metadata",
        "@npm//class-transformer",
        "@npm//class-validator",
    ],
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")

docker_build(
    name = "docker",
    context = ".",
    dockerfile = "Dockerfile",
    base = "@io_bazel_rules_docker//images:alpine",
    args = {
        "NODE_VERSION": "16",
    },
    deps = [
        ":app",
    ],
)
